feat: download all your data and delete your account (4.6)
